objects/UDB_Secure_Messaging__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Due Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UDB_Secure_Messagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Read__c</fullName>
        <label>Customer Read</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UDB Secure Messagings</relationshipLabel>
        <relationshipName>UDB_Secure_Messagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>UDB Secure Messagings</relationshipLabel>
        <relationshipName>UDB_Secure_Messagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Advance Review</fullName>
                </value>
                <value>
                    <fullName>Annuity Schedule</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy/Lien</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Case Search</fullName>
                </value>
                <value>
                    <fullName>Certified Court Orders</fullName>
                </value>
                <value>
                    <fullName>Claim Findings Review</fullName>
                </value>
                <value>
                    <fullName>Confirm FVR</fullName>
                </value>
                <value>
                    <fullName>Contact Info Request</fullName>
                </value>
                <value>
                    <fullName>Create New Account</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>Divorce Decree</fullName>
                </value>
                <value>
                    <fullName>Doc Request</fullName>
                </value>
                <value>
                    <fullName>Doc Request Review</fullName>
                </value>
                <value>
                    <fullName>Draft Order Review</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>FOIA Request</fullName>
                </value>
                <value>
                    <fullName>FVR Request</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Identity Report</fullName>
                </value>
                <value>
                    <fullName>Loan Servicing Note</fullName>
                </value>
                <value>
                    <fullName>Mail Processing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Misc. Doc Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pleadings Review</fullName>
                </value>
                <value>
                    <fullName>Pricing Request</fullName>
                </value>
                <value>
                    <fullName>Processing Notes</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UDB Secure Messaging</label>
    <nameField>
        <displayFormat>SecureMessage-{0000}</displayFormat>
        <label>Subject</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDB Secure Messagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>